cmake_minimum_required(VERSION 3.17)
project(Lab2_DSA)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Lab2_DSA
        App.cpp
        ExtendedTest.cpp
        ExtendedTest.h
        ShortTest.cpp
        ShortTest.h
        SortedSet.cpp
        SortedSet.h
        SortedSetIterator.cpp
        SortedSetIterator.h)
